# hello

./: .drone.yaml  .drone.yml  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  feimeng.md  index.md  main.go  my.txt  new.txt  note.md  test.txt
blog/: index.md
docs/: CNAME  index.md  seat.stl  t.md  t2.md
mybook/: book.toml
mybook/src/: SUMMARY.md  chapter_1.md  review.md
src/: anim.rs  color.rs  lib.rs.bk  lib.rs.bk2  main.rs  main.rs.bk  main.rs.bk10  main.rs.bk11  main.rs.bk12  main.rs.bk13  main.rs.bk14  main.rs.bk15  main.rs.bk16  main.rs.bk17  main.rs.bk18  main.rs.bk19  main.rs.bk2  main.rs.bk20  main.rs.bk21  main.rs.bk22  main.rs.bk23  main.rs.bk25  main.rs.bk26  main.rs.bk27  main.rs.bk28  main.rs.bk29  main.rs.bk31  main.rs.bk32  main.rs.bk34  main.rs.bk35  main.rs.bk36  main.rs.bk37  main.rs.bk38  main.rs.bk4  main.rs.bk40  main.rs.bk41  main.rs.bk43  main.rs.bk44  main.rs.bk45  main.rs.bk46  (+16 more)
src/anim/: dog.rs
src/bin2/: box  box.rs  hello2.rs
