[package]
name = "hello"
version = "0.1.1"
authors = ["makecodechangeword@outlook.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = "0.8.1"
# rand = "^0.8.0" # 0.5.0 <= ver < 1.0.0, major version number can not be changed 
# rayon = "1.5.0"
# bumpalo = "3.4.0"

[profile.release]
lto = true
codegen-units = 1
panic ='abort'

[[bin]]
name = "hello"
path = "src/main.rs"