[package]
name = "hello"
version = "0.1.1"
authors = ["makecodechangeword@outlook.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = "0.8.1"
# rand = "^0.8.0" # 0.5.0 <= ver < 1.0.0, major version number can not be changed 
# rayon = "1.5.0"
# bumpalo = "3.4.0"
# op = {version = "0.1.0", path = "../op"}
# op = {version = "0.1.0", git = "https://github.com/yu-chenxi/op"}
# rust-crypto = "0.2.36"
# itertools = "0.10.0"
mimalloc = { version = "0.1.22", default-features = false }

[profile.release]
# lto = true
# codegen-units = 1
# panic ='abort'
debug = true

[[bin]]
name = "hello"
path = "src/main.rs"